[gd_scene load_steps=11 format=2]

[ext_resource path="res://TeladosMapas.gd" type="Script" id=1]
[ext_resource path="res://font/PressStart2P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Mapamundi/planeta2.png" type="Texture" id=3]
[ext_resource path="res://Mapamundi/DELL SPACE COMPLETE.png" type="Texture" id=4]
[ext_resource path="res://Mapamundi/planeta tutorial.png" type="Texture" id=5]
[ext_resource path="res://Mapamundi/terra plana.png" type="Texture" id=6]
[ext_resource path="res://Mapamundi/planeta3.png" type="Texture" id=7]
[ext_resource path="res://Mapamundi/planeta1.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 9
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="DellSpaceComplete" type="Sprite" parent="."]
position = Vector2( 394.5, 230.5 )
scale = Vector2( 0.795899, 0.775 )
texture = ExtResource( 4 )

[node name="PlanetaTutorial" type="Sprite" parent="."]
position = Vector2( 92, 141 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Tutorial" type="Button" parent="."]
margin_left = 50.0
margin_top = 167.0
margin_right = 134.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 1 )
text = "Tutorial"

[node name="Fase1" type="Button" parent="."]
margin_left = 53.0
margin_top = 369.0
margin_right = 128.0
margin_bottom = 385.0
custom_fonts/font = SubResource( 1 )
text = "World 1"

[node name="Fase2" type="Button" parent="."]
margin_left = 347.0
margin_top = 366.0
margin_right = 422.0
margin_bottom = 382.0
custom_fonts/font = SubResource( 1 )
text = "World 2"

[node name="Fase3" type="Button" parent="."]
margin_left = 332.0
margin_top = 268.0
margin_right = 407.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 1 )
text = "World 3"

[node name="Fase4" type="Button" parent="."]
margin_left = 344.0
margin_top = 167.0
margin_right = 419.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 1 )
text = "World 4"

[node name="voltarMenu" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -29.0
margin_right = -1.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = "X"

[node name="Planeta3" type="Sprite" parent="."]
position = Vector2( 93, 338 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Planeta1" type="Sprite" parent="."]
position = Vector2( 386, 339 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Planeta2" type="Sprite" parent="."]
position = Vector2( 369, 239 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="TerraPlana" type="Sprite" parent="."]
position = Vector2( 388, 149 )
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 6 )

[connection signal="pressed" from="Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Fase1" to="." method="_on_Fase1_pressed"]
[connection signal="pressed" from="Fase2" to="." method="_on_Fase2_pressed"]
[connection signal="pressed" from="Fase3" to="." method="_on_Fase3_pressed"]
[connection signal="pressed" from="Fase4" to="." method="_on_Fase4_pressed"]
[connection signal="pressed" from="voltarMenu" to="." method="_on_voltarMenu_pressed"]
